--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -151,8 +151,8 @@ pre {
 }
 
 ::selection {
-  color: #8f84f3;
-  background: #e3e1fc;
+  color: rgb(115, 103, 240, 0.8);
+  background: rgb(115, 103, 240, 0.1);
 }
 
 .dark-layout .badge.badge-light-dark {
