--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -14,7 +14,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12" [@fadeInLeftOnEnter]>
           <div class="card">
             <div class="card-header">
-              <ul ngbNav #navWithIcons="ngbNav" class="nav-tabs" [destroyOnHide]="false" [(activeId)]="activeId">
+              <ul ngbNav #navWithIcons="ngbNav" class="nav-tabs" [destroyOnHide]="false" (activeIdChange)="activeIdChange($event)" [(activeId)]="activeId">
                 <li [ngbNavItem]="1">
                   <a ngbNavLink>
                     <span [data-feather]="'problem' | iconName"></span> {{ 'Problem' | translate }}
@@ -23,6 +23,7 @@
                     <problem-description [problem]="problem"></problem-description>
                   </ng-template>
                 </li>
+
                 <li [ngbNavItem]="2">
                   <a ngbNavLink>
                     <span [data-feather]="'attempt' | iconName"></span> {{ 'Attempts' | translate }}
@@ -31,7 +32,17 @@
                     <problem-attempts [submitEvent]="submitEvent?.asObservable()" [problem]="problem"></problem-attempts>
                   </ng-template>
                 </li>
-                <li [ngbNavItem]="3" *ngIf="studyPlanId">
+
+                <li [ngbNavItem]="3">
+                  <a ngbNavLink>
+                    <span [data-feather]="'hack' | iconName"></span> {{ 'Hacks' | translate }}
+                  </a>
+                  <ng-template ngbNavContent>
+                    <problem-hacks [problem]="problem"></problem-hacks>
+                  </ng-template>
+                </li>
+
+                <li [ngbNavItem]="4" *ngIf="studyPlanId">
                   <a ngbNavLink routerLink="/practice/problems/study-plan/{{ studyPlanId }}">
                     <span [data-feather]="'activity'"></span> {{ 'StudyPlan' | translate }}
                   </a>
@@ -39,7 +50,8 @@
                     <problem-description [problem]="problem"></problem-description>
                   </ng-template>
                 </li>
-                <li [ngbNavItem]="3" *ngIf="contestId">
+
+                <li [ngbNavItem]="4" *ngIf="contestId">
                   <a ngbNavLink routerLink="/competitions/contests/contest/{{ contestId }}/problems">
                     <span [data-feather]="'flag'"></span> {{ 'Contest' | translate }}
                   </a>
@@ -48,15 +60,36 @@
                   </ng-template>
                 </li>
               </ul>
-          
+
             </div>
-          
+
             <div class="card-body">
               <div [ngbNavOutlet]="navWithIcons" class="mt-2"></div>
             </div>
-    
+
           </div>
-        
+
+
+          <div *ngIf="currentUser?.permissions.canCreateProblems" class="card">
+            <div class="card-header">
+              <div class="card-title">
+                Check input
+              </div>
+            </div>
+
+            <div class="card-body">
+              <ngx-monaco-editor
+                [ngModelOptions]="{standalone: true}"
+                [options]="editorOptions"
+                [(ngModel)]="checkInput"
+                class="mt-1"
+                style="height: 300px;"
+                ngDefaultControl
+              ></ngx-monaco-editor>
+              <div class="btn mt-2 btn-primary btn-sm" (click)="saveCheckInput()">Save</div>
+            </div>
+
+          </div>
         </div>
 
         <div class="col-lg-3 col-md-12 col-sm-12" [@fadeInRightOnEnter]>  
