--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -160,11 +160,6 @@ pre {
 }
 
 .hljs-ln-numbers {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 
   text-align: center;
@@ -188,10 +183,26 @@ pre {
   background-color: #ddf5f0;
 }
 
+.tooltip-danger .tooltip-inner {
+  //color: #ea5455;
+  //background-color: rgba(234, 84, 85, 0.1);
+  color: white;
+  background-color: #ea5455;
+  box-shadow: 0 0 10px #ea5455 !important;
+}
+
 .tooltip-primary .arrow:before {
   border-top-color: #f3effc;
 }
 
 .tooltip-success .arrow:before {
   border-top-color: #ddf5f0;
+}
+
+.tooltip-danger .arrow:before {
+  border-top-color: #ea5455;
+}
+
+.ng-invalid {
+  border-color: #ea5455 !important;
 }
