implement hacks | problem

--- a/src/app/modules/problems/pages/attempt/attempt.component.html
+++ b/src/app/modules/problems/pages/attempt/attempt.component.html
@@ -6,7 +6,7 @@
     <section class="mt-2 pl-2 pr-2">
       <div class="row">
         <div class="col-12">
-          <attempts-table [attempts]="[attempt]"></attempts-table>
+          <attempts-table [hackEnabled]="true" [attempts]="[attempt]"></attempts-table>
         </div>
       </div>
     </section>
