--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -17,7 +17,7 @@
             </div>
           </div>
 
-          <attempts-table [attempts]="attempts"></attempts-table>
+          <attempts-table [hackEnabled]="true" [attempts]="attempts"></attempts-table>
 
           <pagination
             [collectionSize]="totalAttemptsCount"
