--- a/src/app/modules/problems/pages/problem/problem-attempts/problem-attempts.component.html
+++ b/src/app/modules/problems/pages/problem/problem-attempts/problem-attempts.component.html
@@ -1,12 +1,16 @@
 <div class="form-group">
   <div class="custom-control custom-checkbox" *ngIf="currentUser">
     <input type="checkbox" class="custom-control-input" [(ngModel)]="myAttempts"
-    (change)="reloadAttempts()" [ngModelOptions]="{standalone: true}" id="myAttempts" />
+           (change)="reloadAttempts()" [ngModelOptions]="{standalone: true}" id="myAttempts"/>
     <label class="custom-control-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
   </div>
 </div>
 
-  <attempts-table [attempts]="attempts"></attempts-table>
+<attempts-table
+  (hackSubmitted)="hackSubmitted.next()"
+  [hackEnabled]="true"
+  [attempts]="attempts">
+</attempts-table>
 
 <pagination
   *ngIf="attempts.length > 0"
