--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
@@ -28,6 +28,7 @@
           tooltipClass="tooltip-danger"
         >
           <monaco-editor
+            [height]="540"
             [formControl]="editorForm.controls.code">
           </monaco-editor>
         </div>
