--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -75,23 +75,8 @@
     </div>
   </div>
 
-  <div class="col-12">
-    <div style="padding: 0px !important;" [ngClass]="{
-          'col-lg-6 offset-lg-3 col-12 offset-0':  !isMenuToggled || isMenuCollapsed,
-          'col-lg-10 offset-lg-1 col-12 offset-0': isMenuToggled && !isMenuCollapsed
-        }">
-      <div class="layout-spacing mt-2">
-        <swiper [config]="contestsSwiperConfig" class="swiper-contests swiper-lazy-loading" #contestsSwiper>
-          <div class="swiper-wrapper">
-            <div class="swiper-slide" *ngFor="let contest of lastContests">
-              <contest-card [contest]="contest"></contest-card>
-            </div>
-          </div>
-          <!-- Add Pagination -->
-          <div class="swiper-pagination"></div>
-        </swiper>
-      </div>
-    </div>
+  <div class="col-lg-8 offset-lg-2 col-12 text-center">
+    <calendar-section></calendar-section>
   </div>
 
   <div class="col-12 mt-3">
