--- a/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-      <div class="col-md-6 col-sm-6" [ngClass]="{
+      <div class="col-6" [ngClass]="{
         'col-lg-3': currentUser,
         'col-lg-4': !currentUser
       }">
@@ -20,8 +20,8 @@
           />
         </div>
       </div>
-    
-      <div class="col-md-6 col-sm-6" [ngClass]="{
+
+      <div class="col-6" [ngClass]="{
         'col-lg-3': currentUser,
         'col-lg-4': !currentUser
       }">
@@ -30,20 +30,20 @@
             {{ 'TAGS' | translate }}:
           </strong>
         </label>
-      <div class="form-group">
-        <ng-select
+        <div class="form-group">
+          <ng-select
             [multiple]="true"
             placeholder="{{ 'SELECT' | translate }}:"
             (change)="reload()"
             [(ngModel)]="filter.tags"
             [ngModelOptions]="{standalone: true}"
-        >
-          <ng-option *ngFor="let tag of tags" [value]="tag.id">{{ tag.name }}</ng-option>
-        </ng-select>
-        </div>    
+          >
+            <ng-option *ngFor="let tag of tags" [value]="tag.id">{{ tag.name }}</ng-option>
+          </ng-select>
+        </div>
       </div>
-    
-      <div class="col-md-6 col-sm-6" [ngClass]="{
+
+      <div class="col-6" [ngClass]="{
         'col-lg-3': currentUser,
         'col-lg-4': !currentUser
       }">
@@ -53,21 +53,21 @@
           </strong>
         </label>
         <div class="form-group">
-          <ng-select          
+          <ng-select
             (change)="reload()"
             [(ngModel)]="filter.difficulty"
             [ngModelOptions]="{standalone: true}"
           >
-              <ng-option *ngFor="let item of difficulties" [value]="item.value">
+            <ng-option *ngFor="let item of difficulties" [value]="item.value">
                 <span class="text-{{ item.value | problemDifficultyColor }}">
                   {{ item.name }}
                 </span>
-              </ng-option>
-            </ng-select>                      
-          </div>    
+            </ng-option>
+          </ng-select>
+        </div>
       </div>
-    
-      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="currentUser">
+
+      <div class="col-lg-3 col-6" *ngIf="currentUser">
         <label class="text-primary">
           <strong>
             {{ 'STATUS' | translate }}:
@@ -79,22 +79,135 @@
             [(ngModel)]="filter.status"
             [ngModelOptions]="{standalone: true}"
           >
-              <ng-option [value]="1">
-                <i class="text-success" [data-feather]="'exists' | iconName"></i>
-                {{ 'Solved' | translate }}
-              </ng-option>
-              <ng-option [value]="2">
-                <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-                {{ 'Unsolved' | translate }}
-              </ng-option>
-              <ng-option [value]="3">
-                <i class="text-warning" [data-feather]="'minus'"></i>
-                {{ 'Unknown' | translate }}
-              </ng-option>
-            </ng-select>                      
-          </div>    
+            <ng-option [value]="3">
+              <i class="text-warning" [data-feather]="'minus'"></i>
+              {{ 'Unknown' | translate }}
+            </ng-option>
+            <ng-option [value]="1">
+              <i class="text-success" [data-feather]="'exists' | iconName"></i>
+              {{ 'Solved' | translate }}
+            </ng-option>
+            <ng-option [value]="2">
+              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
+              {{ 'Unsolved' | translate }}
+            </ng-option>
+          </ng-select>
+        </div>
       </div>
-    
-    </div>     
-  </div>      
+
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-6">
+        <label class="text-primary">
+          <strong>
+            {{ 'Checker' | translate }}:
+          </strong>
+        </label>
+        <div class="form-group">
+          <ng-select
+            (change)="reload()"
+            [(ngModel)]="filter.hasChecker"
+            [ngModelOptions]="{standalone: true}"
+            [clearable]="false"
+          >
+            <ng-option [value]="null">
+            </ng-option>
+            <ng-option [value]="true">
+              <i class="text-success" [data-feather]="'exists' | iconName"></i>
+              {{ 'Yes' | translate }}
+            </ng-option>
+            <ng-option [value]="false">
+              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
+              {{ 'No' | translate }}
+            </ng-option>
+          </ng-select>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-6">
+        <label class="text-primary">
+          <strong>
+            {{ 'CheckInput' | translate }}:
+          </strong>
+        </label>
+        <div class="form-group">
+          <ng-select
+            (change)="reload()"
+            [(ngModel)]="filter.hasCheckInput"
+            [ngModelOptions]="{standalone: true}"
+            [clearable]="false"
+          >
+            <ng-option [value]="null">
+            </ng-option>
+            <ng-option [value]="true">
+              <i class="text-success" [data-feather]="'exists' | iconName"></i>
+              {{ 'Yes' | translate }}
+            </ng-option>
+            <ng-option [value]="false">
+              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
+              {{ 'No' | translate }}
+            </ng-option>
+          </ng-select>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-6">
+        <label class="text-primary">
+          <strong>
+            {{ 'Solution' | translate }}:
+          </strong>
+        </label>
+        <div class="form-group">
+          <ng-select
+            (change)="reload()"
+            [(ngModel)]="filter.hasSolution"
+            [ngModelOptions]="{standalone: true}"
+            [clearable]="false"
+          >
+            <ng-option [value]="null">
+            </ng-option>
+            <ng-option [value]="true">
+              <i class="text-success" [data-feather]="'exists' | iconName"></i>
+              {{ 'Yes' | translate }}
+            </ng-option>
+            <ng-option [value]="false">
+              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
+              {{ 'No' | translate }}
+            </ng-option>
+          </ng-select>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-6">
+        <label class="text-primary">
+          <strong>
+            {{ 'PartialSolvable' | translate }}:
+          </strong>
+        </label>
+        <div class="form-group">
+          <ng-select
+            (change)="reload()"
+            [(ngModel)]="filter.partialSolvable"
+            [ngModelOptions]="{standalone: true}"
+            [clearable]="false"
+          >
+            <ng-option [value]="null">
+            </ng-option>
+            <ng-option [value]="true">
+              <i class="text-success" [data-feather]="'exists' | iconName"></i>
+              {{ 'Yes' | translate }}
+            </ng-option>
+            <ng-option [value]="false">
+              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
+              {{ 'No' | translate }}
+            </ng-option>
+          </ng-select>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
 </div>
