nofix problem with user contests

--- a/src/app/modules/contests/pages/user-contests/contest/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/pages/user-contests/contest/contest-card/contest-card.component.html
@@ -47,5 +47,25 @@
         {{ contest.type }}
       </span>
     </div>
+    <div>
+      <button
+        ngbTooltip="{{ 'Cancel' | translate }}"
+        rippleEffect
+        class="btn btn-sm round btn-gradient-success"
+        (click)="cancelRegistration()"
+        *ngIf="contest.isRegistered"
+      >
+        <i data-feather="user" [size]="16"></i> {{ 'Registered' | translate }}
+        <i data-feather="x" class="text-danger"></i>
+      </button>
+      <button
+        rippleEffect
+        class="btn btn-sm round btn-gradient-primary"
+        (click)="openRegistrationModal()"
+        *ngIf="!contest.isRegistered"
+      >
+        <i data-feather="user" [size]="16"></i> {{ 'CONTESTS.REGISTER' | translate }}
+      </button>
+    </div>
   </div>
 </div>
