--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import './assets/scss/styles';
 
 @import 'app/languages.scss';
+@import 'app/chapters.scss';
 
 @import "~highlight.js/styles/vs.css";
 
